kubernetes/hello-espv2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: endpoints-examples
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      volumes:
        - name: service-account-creds
          secret:
            secretName: service-account-creds
      containers:
      - name: esp
        image: ghcr.io/timburks/esp-v2:latest
        args: [
          "--listener_port=8081",
          "--backend=127.0.0.1:8080",
          "--service=hello.endpoints.agentio.cloud.goog",
          "--rollout_strategy=managed",
          "--non_gcp",
          "--service_account_key=/etc/esp/creds/service-account-creds.json"
        ]
        ports:
          - containerPort: 8081
        volumeMounts:
          - mountPath: /etc/esp/creds
            name: service-account-creds
            readOnly: true
      - name: hello
        image: ghcr.io/agentio/hello-server:latest
        ports:
          - containerPort: 8080    
      nodeSelector:
        kubernetes.io/arch: amd64
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: endpoints-examples
spec:
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: hello
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello
  namespace: endpoints-examples
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
      - hello.timbx.me
      - hello.endpoints.agentio.cloud.goog
    secretName: hello-tls
  rules:
  - host: hello.timbx.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 80
  - host: hello.endpoints.agentio.cloud.goog
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello
            port:
              number: 80
